--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Sistema de Ventas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script
+    src="https://kit.fontawesome.com/4086eabc67.js"
+    crossorigin="anonymous"
+  ></script>
     <link rel="stylesheet" href="/public/css/styles.css">
 </head>
   <body>
@@ -19,7 +23,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-9 col-lg-8 mx-auto">
-                    <h3 class="login-heading mb-4">Inicio de Sesión</h3>
+                    <h3 class="login-heading mb-4" id="usuario">Inicio de Sesión</h3>
 
 										<?php include_once './app/controllers/LoginController.php'; ?>
 
